--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="th">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://cdn-icons-png.flaticon.com/512/10252/10252232.png" />
+    <!-- เปลี่ยนตรงนี้! ให้ชี้ไปที่ชื่อไฟล์ที่เราเพิ่งอัปโหลด -->
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Parker's Wallet</title>
+    <title>Parker's Smart Wallet</title>
   </head>
   <body>
     <div id="root"></div>
