--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <https://github.com/ParkerThanayut/My-Wallet/blob/main/254b7a9b67f3a3e700f939f00840ae6e.jpg>
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/jpg" href="/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parker's Smart Wallet</title>
   </head>
@@ -12,4 +12,5 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
 
