--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="th">
   <head>
     <meta charset="UTF-8" />
-    <https://github.com/ParkerThanayut/My-Wallet/blob/main/254b7a9b67f3a3e700f939f00840ae6e.jpg>
-    <link rel="icon" type="image/jpg" href="/logo.jpg" />
+    <!-- ตรงนี้เจมี่ใส่ชื่อไฟล์เป็น logo.png นะคะ ถ้าซิสใช้ .jpg ให้เปลี่ยนเองน้า -->
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parker's Smart Wallet</title>
   </head>
@@ -12,5 +12,3 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
-
