--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="th">
   <head>
     <meta charset="UTF-8" />
-    <!-- ตรงนี้เจมี่ใส่ชื่อไฟล์เป็น logo.png นะคะ ถ้าซิสใช้ .jpg ให้เปลี่ยนเองน้า -->
+    <!-- ตรงนี้เจมี่ใส่ชื่อไฟล์เป็น logo.png นะคะ ถ้าซิสใช้ .jpg ให้เปลี่ยนเป็น href="/logo.jpg" น้า -->
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parker's Smart Wallet</title>
