--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- ตรงนี้เจมี่ใส่ชื่อไฟล์เป็น logo.png นะคะ ถ้าซิสใช้ .jpg ให้เปลี่ยนเป็น href="/logo.jpg" น้า -->
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" href="/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parker's Smart Wallet</title>
   </head>
@@ -12,3 +12,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
