Update favicon and title in index.html

--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="th">
   <head>
     <meta charset="UTF-8" />
-    <!-- ตรงนี้เจมี่ใส่ชื่อไฟล์เป็น logo.png นะคะ ถ้าซิสใช้ .jpg ให้เปลี่ยนเป็น href="/logo.jpg" น้า -->
-    <link rel="icon" type="image/png" href="/logo.jpg" />
+    <link rel="icon" type="image/svg+xml" href="https://cdn-icons-png.flaticon.com/512/10252/10252232.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Parker's Smart Wallet</title>
+    <title>Parker's Wallet</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
