--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="th">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://cdn-icons-png.flaticon.com/512/10252/10252232.png" />
+    
+    <!-- ⚠️ ถ้าซิสอัปรูปเป็น .jpg ให้แก้ตรงนี้เป็น href="/logo.jpg" นะคะ -->
+    <link rel="icon" type="image/png" href="/logo.png" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Parker's Wallet</title>
+    <title>Parker's Smart Wallet</title>
   </head>
   <body>
     <div id="root"></div>
