--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     
-    <!-- ⚠️ ถ้าซิสอัปรูปเป็น .jpg ให้แก้ตรงนี้เป็น href="/logo.jpg" นะคะ -->
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <!-- เจมี่ใส่ลิงก์รูปกระเป๋าตังค์จากเน็ตให้แล้วค่ะ ไม่ต้องอัปโหลดไฟล์เองแล้ว ใช้ได้เลย! -->
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/2953/2953363.png" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parker's Smart Wallet</title>
