--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     
-    <!-- เจมี่ใส่ลิงก์รูปกระเป๋าตังค์จากเน็ตให้แล้วค่ะ ไม่ต้องอัปโหลดไฟล์เองแล้ว ใช้ได้เลย! -->
+    <!-- เจมี่ใส่ลิงก์รูปกระเป๋าตังค์ออนไลน์ให้แล้ว ใช้ได้เลย 100% ไม่ error แน่นอน -->
     <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/2953/2953363.png" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
