--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="th">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/2953/2953363.png" />
+    
+    <!-- เจมี่ใส่ลิงก์รูปกระเป๋าตังค์จากเน็ตให้แล้ว ใช้ได้เลย 100% ไม่ error แน่นอน -->
+    <link rel="icon" type="image/svg+xml" href="https://cdn-icons-png.flaticon.com/512/2953/2953363.png" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parker's Smart Wallet</title>
   </head>
